<resources>
    <string name="web_client_id" translatable="false">147093333742-hqrk6uhcn5spobv4r35m95j65k2f0i01.apps.googleusercontent.com</string>
    <string name="app_name">OPSC_POE_PART_2</string>
    <string name="pick_color">Pick a Color</string>
    <string name="LanguageTest">Hi there my friend</string>
    <string name="DeleteAccount">Delete account</string>
    <string name="Setting">Settings</string>
    <string name="Logout">Logout</string>
    <string name="Language">Language</string>
    <string name="PrivacyPolicy">Privacy Policy</string>
    <string name="Notifications">Notifications</string>
    <string name="Themeswap">Theme swap</string>
    <string name="Name">Name</string>
    <string name="Register">Register</string>
    <string name="login">Login</string>
    <string name="TITLE">TITLE</string>
    <string name="TEXT">TEXT</string>
    <string name="PageColor">Page Color</string>
    <string name="SAVE">SAVE</string>
    <string name="ImagePreview">Image Preview</string>
    <string name="RecognizeText">Recognize Text</string>
    <string name="TakeImage">Take Image</string>
    <string name="RecognizedText">Recognized Text</string>
    <string name="DailyGoals">Daily Goals</string>
    <string name="SelectYourGoalType">Select Your Goal Type</string>
    <string name="WhatisTroublingYou">What is troubling you?</string>
    <string name="Whatdoyouwanttoachieve">What do you want to achieve?</string>
    <string name="SaveGoal">Save Goal</string>
    <string name="WelcometoyourDiary">Welcome to your diary!</string>
    <string name="AddEntry">Add Entry</string>
    <string name="PlayBackgroundSound">Play background sound</string>
    <string name="Focus">Focus</string>
    <string name="Whalesounds">Whale sounds</string>
    <string name="Swipetoexploremorevideos">Swipe to explore more videos!</string>
    <string name="WhaleQuest">Whale Quest</string>
    <string name="Start">Start</string>
    <string name="LevelUp">Level Up</string>
    <string name="ThisweekLevel">This weeks levels</string>
    <string name="ThisMonthLevel">Completed weeks levels</string>
    <string name="Unlock">Unlocks</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="ForgotPassword">Forgot Password?</string>
    <string name="Meditation">Meditation</string>
    <string name="Music">Music</string>
    <string name="Sleep">Sleep</string>
    <string name="Meditate">Meditate</string>
    <string name="Profile">Profile</string>
    <string name="INFORMATION">INFORMATION</string>
    <string name="Level">Level</string>
    <string name="Experience">Experience</string>
    <string name="Depthtohelpyou">How do you want Ocean\'s Depth to help you?</string>
    <string name="ReduceStress">Reduce Stress</string>
    <string name="ImprovePerformance">Improve performance</string>
    <string name="BetterSleep">Better sleep</string>
    <string name="IncreaseHappiness">Increase Happiness</string>
    <string name="ImproveMentalHealth">Improve mental health</string>
    <string name="Other">Other</string>
    <string name="Continue">Continue</string>
    <string name="Surname">Surname</string>
    <string name="Username">Username</string>
    <string name="Rewards">Rewards</string>
    <string name="Date">Date</string>
    <string name="Title">Title</string>
    <string name="en">English</string>
    <string name="af">Afrikaans</string>
    <string name="NotificateButton">Change Permissions</string>
    <string name="Diary">Diary</string>
    <string name="Dashboard">Dashboard</string>
    <string name="Game">Game</string>

    <string-array name="color_options">
        <item>Red</item>
        <item>Green</item>
        <item>Blue</item>
        <item>Yellow</item>
    </string-array>

</resources>