<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical"
    tools:context=".CameraTextReader">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/inputImageBtn"
            android:layout_width="match_parent"
            android:layout_weight="1"
            app:icon="@drawable/baseline_add_a_photo_24"
            android:text="@string/TakeImage"
            android:layout_marginEnd="5dp"
            android:layout_height="match_parent"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/recognizeTextBtn"
            android:layout_width="match_parent"
            android:layout_weight="1"
            app:icon="@drawable/baseline_aod_24"
            android:text="@string/RecognizeText"
            android:layout_marginStart="5dp"
            android:layout_height="match_parent"/>


    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/imageIv"
                android:layout_width="match_parent"
                app:strokeWidth="2dp"
                android:src="@drawable/baseline_crop_original_24"
                android:adjustViewBounds="true"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/RecognizedText"/>

            <EditText
                android:id="@+id/recognizeTextEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/saveTextBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Save Entry"
                android:layout_marginTop="10dp"/>
</LinearLayout>
</ScrollView>

</LinearLayout>